Fixed image distortion on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,9 +88,10 @@ h6 {
 
 .project-image {
     box-shadow: -10px -10px 10px 5px lightgray;
-    width: 50%;
+    max-width: 50%;
+    max-height: 100%;
     height: auto;
-    max-width: 100%;
+    width: auto;
 }
 
 .project-descr {
